--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,9 +1,11 @@
 /* Button Color */
 
-button {
-    color: #FF0000;
+.container {
+    button {
+        color: #FF0000;
 
-    &:hover {
-        color: #00FF00;
+        &:hover {
+            color: #00FF00;
+        }
     }
 }
