--- a/sass_scss/103-sort_strings.scss
+++ b/sass_scss/103-sort_strings.scss
@@ -1,4 +1,4 @@
-/*Fries strings to be sorted*/
-$list_to_sort: curly-fries, mashed-potatoes, tater-tots, french-fries;
+/* strings to be sorted */
+$list_to_sort: john anna zoe kim felicia carrie;
 $list_sorted: sort($list_to_sort);
 @debug $list_sorted;
