--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,7 +1,7 @@
-/* Nested hover */
+/* Create a nested hover effect for a button */
 
 button {
-    color: #FF0000;
+    color: #FF0000; 
 
     &:hover {
         color: #00FF00;
